--- a/client/palindrome-ui/src/components/Button/Button.module.css
+++ b/client/palindrome-ui/src/components/Button/Button.module.css
@@ -1,4 +1,5 @@
 .button {
+  width: auto;
   display: inline-flex;
   justify-content: center;
   background-color: transparent;
@@ -10,6 +11,7 @@
   color: #1976d2;
   cursor: pointer;
   margin-bottom: 1rem;
+  transition: all 1s;
 }
 
 .button:disabled {
@@ -24,23 +26,23 @@
 .loading {
   width: 1.5rem;
   height: 1.5rem;
-  background-color: #1976d2; 
-  animation: color-spin  5s linear infinite;
+  color: #1976d2; 
+  animation: color-spin 1.5s linear infinite;
 }
 
 @keyframes color-spin {
   0% {
     transform: rotate(0deg);
-    background-color: #1976d2;
+    fill: #1976d2;
   }
 
   50% {
     transform: rotate(90deg); /* Rotate halfway */
-    background-color: #33a6ff; /* Change color in the middle */
+    fill: #33a6ff; /* Change color in the middle */
   }
 
   100% {
     transform: rotate(360deg); /* Rotate to the end */
-    background-color: #1976d2; /* Return to the original color */
+    fill: #1976d2; /* Return to the original color */
   }
 }
